--- a/04 - Array Cardio Day 1/index-START.html
+++ b/04 - Array Cardio Day 1/index-START.html
@@ -38,28 +38,59 @@
     
     // Array.prototype.filter()
     // 1. Filter the list of inventors for those who were born in the 1500's
+    let fifteen = inventors.filter(inventor => inventor.year >= 1500 && inventor.year < 1600);
+    console.log(fifteen);
 
     // Array.prototype.map()
     // 2. Give us an array of the inventors first and last names
+    let fullName = inventors.map(inventors => inventors.first + ' ' + inventors.last);
+    console.log(fullName);
 
     // Array.prototype.sort()
     // 3. Sort the inventors by birthdate, oldest to youngest
+    let birthOrder = inventors.sort((a, b) => a.year - b.year);
+    console.log(birthOrder);
 
     // Array.prototype.reduce()
     // 4. How many years did all the inventors live all together?
+    let numOfYears = inventors.reduce((total, inventors) => total + (inventors.passed - inventors.year), 0);
+    console.log(numOfYears);
 
     // 5. Sort the inventors by years lived
+    let yearsLived = inventors.sort((a, b) => { const youngest = a.year-a.year; const oldest = a.year-a.year; oldest - youngest;  });
+    console.log(yearsLived);
+    let yearsLivedDescend = yearsLived.reverse();
+    console.log(yearsLivedDescend);
 
     // 6. create a list of Boulevards in Paris that contain 'de' anywhere in the name
     // https://en.wikipedia.org/wiki/Category:Boulevards_in_Paris
-
+    // const category = document.querySelector('.mw-category');
+    // const links = Array.from(category.querySelectorAll('a'));
+    // const de = links
+    //             .map(link => link.textContent)
+    //             .filter(streetName => streetName.includes('de'));
 
     // 7. sort Exercise
     // Sort the people alphabetically by last name
+    const peopleSorted = people.sort((lastOne, nextOne) => {
+      const [aLast, aFirst] = lastOne.split(', ');
+      const [bLast, bFirst] = nextOne.split(', ');
+      return aLast > bLast ? 1 : -1;
+    });
+    console.log(peopleSorted);
 
     // 8. Reduce Exercise
     // Sum up the instances of each of these
     const data = ['car', 'car', 'truck', 'truck', 'bike', 'walk', 'car', 'van', 'bike', 'walk', 'car', 'van', 'car', 'truck' ];
+    let vehicleSum = data.reduce(function(obj, item) {
+      if (!obj[item]) {
+        obj[item] = 0;
+      }
+      obj[item]++;
+      return obj;
+    }, {});
+
+    console.log(vehicleSum);
 
   </script>
 </body>
