--- a/07 - Array Cardio Day 2/index-START.html
+++ b/07 - Array Cardio Day 2/index-START.html
@@ -28,14 +28,29 @@
     // Some and Every Checks
     // Array.prototype.some() // is at least one person 19 or older?
     // Array.prototype.every() // is everyone 19 or older?
+    const oneOlder = people.some(person => ((new Date()).getFullYear()) - person.year >= 19);
+    console.log({oneOlder});
+    const allOlder = people.every(person => ((new Date()).getFullYear()) - person.year >= 19);
+    console.log({allOlder});
 
     // Array.prototype.find()
     // Find is like filter, but instead returns just the one you are looking for
     // find the comment with the ID of 823423
 
+    const idComment = comments.find(comment => comment.id === 823423);
+
+    console.log(idComment);
+
     // Array.prototype.findIndex()
     // Find the comment with this ID
     // delete the comment with the ID of 823423
+
+    const deletedComment = [
+      ...comments.slice(0, index),
+      ...comments.slice(index + 1)
+    ];
+
+    console.log(deletedComment);
 
   </script>
 </body>
